<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/account"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@null"
            android:src="@drawable/account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/circles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@null"
            android:src="@drawable/circle_design"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/circles"
            android:text="@string/log_out"
            android:textColor="@color/green"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/account"
            app:layout_constraintStart_toStartOf="@+id/account"
            app:layout_constraintTop_toBottomOf="@+id/account" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/circles"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:letterSpacing="0.15"
            android:text="@string/welcome_onboard"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circles" />


        <ImageView
            android:id="@+id/picture"
            android:layout_width="256dp"
            android:layout_height="162dp"
            android:layout_below="@+id/text1"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:contentDescription="@null"
            android:src="@drawable/menu_board_with_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/PROJECTS_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/picture"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="26dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/picture">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:paddingVertical="18dp"
                android:text="@string/projects"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/VENDORS_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/PROJECTS_BUTTON"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="26dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/PROJECTS_BUTTON">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:paddingVertical="18dp"
                android:text="@string/vendors"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/COST_LIST_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/VENDORS_BUTTON"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="26dp"

            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/VENDORS_BUTTON">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:paddingVertical="18dp"
                android:text="@string/cost_list"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ARCHIVE_BUTTON"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/COST_LIST_BUTTON"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="26dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintTop_toBottomOf="@+id/COST_LIST_BUTTON">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="14dp"
                android:paddingVertical="18dp"
                android:text="@string/archive"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>